Fix colour of markbook key cell in dark mode

--- a/src/scss/common/assignment-progress.scss
+++ b/src/scss/common/assignment-progress.scss
@@ -220,7 +220,7 @@ $failed-bg-size: 25%;
   }
 
   .key-cell span {
-    border: 1px solid black;
+    border: 1px solid var(--color-neutral-900);
     display: inline-block;
     width: 22px;
     height: 22px;
